htdocs/modules/system/themes/default/css/reset.css
/*
 * Default Admin Theme
 *
 * @copyright       (c) 2000-2026 XOOPS Project (https://xoops.org)
 * @license         http://www.fsf.org/copyleft/gpl.html GNU public license 3.0
 * @package         themes
 * @since           2.5.x
 * @author          Xoops Design Theme <https://xoops.org/>
 * @maintained      Xoops Design Theme <https://xoops.org/>
 *
*/

* { margin: 0; padding: 0; border: 0; outline: none; text-decoration: none; font-family: sans-serif; font-size: 1em; font-weight: normal; font-style: normal; resize:none; }

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
    font-weight:         inherit;
    font-style:         inherit;
    font-size:             100%;
    font-family:         inherit;
    vertical-align:     top;
    }
/* remember to define focus styles! */
:focus {    outline: 0;}
body { line-height: 1; color: #000; background: #fff;}
ol, ul { list-style: none;}
strong { font-weight: bold; }
/* tables still need 'cellspacing="0"' in the markup */
table { border-collapse: separate; border-spacing: 0;}
caption, th, td { font-weight: normal;}
blockquote:before, blockquote:after, q:before, q:after { content: "";}
blockquote, q { quotes: "" "";}

